// Vitest Snapshot v1

exports[`rendering of MainGridContainer Component > checks if component renders with Full width false 1`] = `
<div
  className="grid-container-desktop-lg"
  data-testid="gridContainer"
>
  <h1>
    Test
  </h1>
</div>
`;

exports[`rendering of MainGridContainer Component > checks if component renders with Full width true 1`] = `
<div
  className=""
>
  <h1>
    Test
  </h1>
</div>
`;
